Redmine版に従来のフィードバックUXを移植
